# SPORT

./: .gitignore  README.md  feedback.md  pyproject.toml  requirements.txt
docs/: proposal.md  research.md  wiki.md
docs/report/: samplepaper.bib  samplepaper.tex
sport/: DETR.py  MultiSports.py  __init__.py  cli.py  data.py  detector.py  detr_track.py  infer.py  tracker.py
sport/cli/: __init__.py  demo.py  eval.py  infer.py  main.py  train.py
src/: cli.py
