# tells pip what build tool to use to build your package
[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sport"
readme = "README.md"
version = "0.0.1"
authors = [{name = "Shreyansh Sharma"}]
description = "Sports Object Recognition and Tracking"

## Dependencies
dependencies = [
    "torch",
    "torchvision",
    "numpy",
    "wandb",
    ]
requires-python = ">=3.11"

# Entry Points
[project.scripts]
sport = "src.cli:main"